--- a/style.css
+++ b/style.css
@@ -6,54 +6,55 @@
     font-family: 'Open Sans', sans-serif; 
 }
 
-header {
-    display: inline;
+header {  
+    background:rgb(192, 192, 196);
+    height: 75px;
+    
+    
 }
 
-.top_navbar{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 60px;
-    background: rgb(163, 157, 148);
-    box-shadow: 1px 0 2px rgba(0,0,0,0.125);
-    display: flex;
-    align-items: center;
-   }
+
 
    .top_navbar .logo{
+    margin-top:;
     width: 250px;
-    font-size: 25px;
+    font-size: 30px;
     font-weight: 700;
-    padding: 0 25px;
+    padding: 10 25px;
     color: red;
     letter-spacing: 2px;
-    text-transform: uppercase;
-    border-right: 1px solid #f5f5f5;
+    inline-size: 90px;
+    
+    
+    
+    
+    
+    
    }
 
    .nav-bar li{
-    float: left;
+    margin-top: -20px;
+    float: right;
+   
     
    }
    .nav-bar ul {
-    list-style: none;
-    padding-left: 700px;
+    margin-top: -25px;
     
     
-    
+   }
+
+   .nav-bar ul li{
+    display: inline-block;
+    line-height: 50px;
+    margin: 0 10px;
+    font-size: 25px;
     
    }
    .nav-bar a{
     color: red;
     text-decoration: none;
-    
-
-    
-    
-    
-    
+     
    }
    .nav-bar a:hover{
     background-color: black;
@@ -61,73 +62,60 @@ header {
    }
 
 
+   .hero {
+    margin-top: 90px;
 
-   .sidebar {
-    
-    position: relative;
+    height: 700px;;
 
-    top: 0;
-    right: 0;
-    height: 100vh;
-    width: 250px;
-    
-    font-size: 20px;
-    font-weight: 800;
-    color: rgb(26, 18, 18);
-    z-index: 999;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    backdrop-filter: blur(10px);
-    display: none;
-  }
- 
-    .sidebar li {
-        width: 100%;
-    }
+    background:url(./pexels-祝-鹤槐-716281.jpg) no-repeat center / cover;
+   }
+
+
 
    
+
+  .text {
+    background: #ffffff69;
+    width:80%;
+    height: 200px;
+    
+    font-weight: 900;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    margin-top:200px ;
+    
+
+
+    
+  } 
+  .text h1 {
+    margin-top: -50px;
+    margin-bottom: 50px;
+  }
 
 
 
 body {
-    background: red url(" ") no-repeat; 
+    background:  url("") no-repeat; 
+
     
-    padding: 20px 0px;   
-}
-header img {
-    width: 100px; 
-    filter:invert(100%);
+       
 }
 
-main {
-    display: flex; 
-    padding-top: 55px; 
-    justify-content: space-between; 
-    margin-bottom: -20px;
-} 
 
-.left {
-    padding-right: 2.5em; 
-    
-} 
 
-.right {
-    margin-top: 70px;
-    color: white;   
-    text-align: center; 
-    padding-right: 200px;
-}
+
 
 h1 {
-    font-size: 2.5em; 
+    font-size: 3rem; 
     font-family: 'Poppins';
     padding-bottom: 20px; 
 }
 
 p {
-    line-height: 1.7;
-    opacity: .8;  
+    line-height: 40px;
+     
 }
 
 button {
@@ -154,7 +142,7 @@ button:hover {
     border: 3px solid;
     width: 100%;
     height: 125px;
-    padding-top: 50px;
+   
 }
 
 .box:hover {
@@ -168,7 +156,7 @@ button:hover {
 footer {
     padding-top: 100px;
     text-align: center;
-    background-color: rgb(23, 54, 54);  
+    background-color: rgb(146, 148, 148);  
 }
 
 .fab {
@@ -194,19 +182,12 @@ footer {
 
 
 
-    .left img {
-        width: 100%;
-         
-    }
+    
 
    
 
    
-    .right {
-        padding-top: 40px; 
-        text-align: center;  
-    }
-
+    
     h1 {
         font-size: 1.8em; 
     }
