--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 header {  
-    background:rgb(192, 192, 196);
+    background:rgb(177, 177, 179);
     height: 75px;
     
     
@@ -29,6 +29,18 @@ header {
     
     
     
+    
+   }
+
+   .logo {
+    margin-top:;
+    width: 250px;
+    font-size: 30px;
+    font-weight: 700;
+    padding: 10 25px;
+    color: red;
+    letter-spacing: 2px;
+    inline-size: 90px;
     
    }
 
@@ -68,22 +80,28 @@ header {
     height: 700px;;
 
     background:url(./pexels-祝-鹤槐-716281.jpg) no-repeat center / cover;
+    opacity: 60%;
    }
 
+   
+
+   
 
 
    
 
   .text {
-    background: #ffffff69;
+    color: #0c0000;
+    background: #faf7f7;
     width:80%;
-    height: 200px;
+    height: 260px;
     
     font-weight: 900;
     display: inline-flex;
     align-items: center;
     justify-content: center;
     margin-top:200px ;
+    
     
 
 
@@ -96,8 +114,65 @@ header {
 
 
 
+  .features {
+
+    background: rgb(140, 140, 184);
+  }
+   
+ #container1 {
+    display: flex;
+    margin: 10px;
+    text-align: center;
+    margin-bottom: 70px;
+    margin-top: 70px;
+    
+}
+    
+ }
+
+ #txt1 {
+    font-size: 20px;
+    margin-top: -60px;
+ }
+
+ #txt2 {
+    font-size: 20px;
+    
+ }
+ 
+ #txt3 {
+    font-size: 20px;
+ }
+
+
+
+
+
+
+
+
+ #container2 {
+    display: flex;
+    margin: 10px;
+    text-align: center;
+    margin-bottom: 40px;
+    
+ }
+
+
+
+
+ #container3 {
+    display: flex;
+    margin: 10px;
+    text-align: center;
+
+ }
+
+
+
 body {
-    background:  url("") no-repeat; 
+    background: rgb(182, 180, 180); 
 
     
        
@@ -115,12 +190,14 @@ h1 {
 
 p {
     line-height: 40px;
+    font-size: 20px;
      
 }
 
 button {
     padding: 15px 60px; 
     margin-top: 30px; 
+    margin-bottom: 40px;
     border-radius: 5rem;
     border: 0; 
     cursor: pointer; 
@@ -128,6 +205,7 @@ button {
     font-size: 1em;
     font-weight: 600;
     transition: 0.3s all ease;
+
 
 }
 
@@ -138,25 +216,17 @@ button:hover {
 
 
 
-.box {
-    border: 3px solid;
-    width: 100%;
-    height: 125px;
    
-}
 
-.box:hover {
-    color: #fff; 
-    background: rgb(158, 72, 72); 
-}
 
 
 /* footer */
 
 footer {
-    padding-top: 100px;
+    
     text-align: center;
-    background-color: rgb(146, 148, 148);  
+    background-color: rgb(31, 32, 32);
+    height: 60px;  
 }
 
 .fab {
@@ -167,6 +237,7 @@ footer {
     color: #fff; 
     transition: 0.3s all ease;  
     margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .fa-facebook-f {
@@ -195,13 +266,12 @@ footer {
     button {
         padding: 15px 90px; 
     }
-    .features {
-        height: 700px;
-    }
+    
 
     footer {
         text-align: center;
-        padding-top: 160px; 
-        height: 700px; 
+        height: 100px
+        
+       ; 
     } 
 
