changimg positions of more items

--- a/style.css
+++ b/style.css
@@ -41,6 +41,8 @@ header {
     color: red;
     letter-spacing: 2px;
     inline-size: 90px;
+    background: #f18080;
+    border-radius: 40px;
     
    }
 
@@ -52,6 +54,7 @@ header {
    }
    .nav-bar ul {
     margin-top: -25px;
+   
     
     
    }
@@ -66,6 +69,10 @@ header {
    .nav-bar a{
     color: red;
     text-decoration: none;
+    background: #8d939c;
+    padding: 10px;
+    border-radius: 50px;
+    margin: 10px;
      
    }
    .nav-bar a:hover{
@@ -79,8 +86,9 @@ header {
 
     height: 700px;;
 
-    background:url(./pexels-祝-鹤槐-716281.jpg) no-repeat center / cover;
+    background:url(images/pexels-祝-鹤槐-716281.jpg) no-repeat center / cover;
     opacity: 60%;
+    border-radius: 20px;
    }
 
    
@@ -92,7 +100,7 @@ header {
 
   .text {
     color: #0c0000;
-    background: #faf7f7;
+    background: #706896d5;
     width:80%;
     height: 260px;
     
@@ -101,6 +109,7 @@ header {
     align-items: center;
     justify-content: center;
     margin-top:200px ;
+    border-radius: 25px;
     
     
 
@@ -110,6 +119,8 @@ header {
   .text h1 {
     margin-top: -50px;
     margin-bottom: 50px;
+    background: #56c3e4;
+    border-radius: 32px;
   }
 
 
@@ -117,6 +128,7 @@ header {
   .features {
 
     background: rgb(140, 140, 184);
+    
   }
    
  #container1 {
@@ -125,6 +137,8 @@ header {
     text-align: center;
     margin-bottom: 70px;
     margin-top: 70px;
+    background: #584194;
+    border-radius: 50px;
     
 }
     
@@ -156,7 +170,8 @@ header {
     margin: 10px;
     text-align: center;
     margin-bottom: 40px;
-    
+    background: #a7a4a4;
+    border-radius: 40px;
  }
 
 
@@ -166,6 +181,8 @@ header {
     display: flex;
     margin: 10px;
     text-align: center;
+    background: #7c6a6a;
+    border-radius: 50px;
 
  }
 
@@ -225,7 +242,7 @@ button:hover {
 footer {
     
     text-align: center;
-    background-color: rgb(31, 32, 32);
+    background-color: rgb(103, 107, 107);
     height: 60px;  
 }
 
