--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 header {  
-    background: rgb(177, 177, 179);
+    background: rgb(240, 240, 241);
     height: 75px;
 }
 
@@ -17,11 +17,11 @@ header {
     font-size: 30px;
     font-weight: 700;
     padding: 10px 25px;
-    color: red;
+    color: rgb(17, 17, 17);
     letter-spacing: 2px;
     inline-size: 90px; 
-    background: #f18080;
-    border-radius: 40px;
+    
+     
 }
 
 .nav-bar li {
@@ -30,7 +30,7 @@ header {
 }
 
 .nav-bar ul {
-    margin-top: -25px;    
+    margin-top: -38px;    
 }
 
 .nav-bar ul li {
@@ -41,58 +41,87 @@ header {
 }
 
 .nav-bar a {
-    color: red;
+    color: rgb(10, 10, 10);
     text-decoration: none;
-    background: #8d939c;
+    background: #f3f4f5;
     padding: 10px;
     border-radius: 50px;
     margin: 10px;
 }
 
 .nav-bar a:hover {
-    background-color: black;
+    background-color: rgb(204, 190, 190);
 }
 
 .hero {
-    margin-top: 90px;
-    height: 700px;
-    background: url(images/pexels-祝-鹤槐-716281.jpg) no-repeat center / cover;
-    opacity: 60%;
-    border-radius: 20px;
+   
 }
+
+#heroimg  {
+    opacity: 30%;
+
+   
+} 
+
+
 
 .text {
     color: #0c0000;
-    background: #706896d5;
+    background: #f7ecec;
     width: 80%;
     height: 260px;
     font-weight: 900;
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    margin-top: 200px;
-    border-radius: 25px;  
+    margin-top: -700px;
+    margin-bottom: 420px;
+    border-radius: 25px; 
+    display: block;
+   
 }
 
 .text h1 {
     margin-top: -50px;
     margin-bottom: 50px;
-    background: #56c3e4;
+    background: #fff;
     border-radius: 32px;
+
 }
 
-.features, #container1, #container2, #container3 {
-    background: rgb(140, 140, 184);  
+.features{
+    background: rgb(241, 241, 243);  
     border-radius: 50px;
 }
 
-#txt1, #txt2, #txt3 {
-    font-size: 20px;
-    margin-top: -60px;
+
+#container1 {
+    display: flex;
+    margin-top: 40px;
+    background: #f0f1f3;
+    border: 1px black solid;
+
+}
+
+#container2 {
+    display: flex;
+    margin-top: 40px;
+    background: #b2b3b4;
+    border: 1px black solid;
+    
+}
+
+#container3 {
+    display: flex;
+    margin-top: 40px;
+    background: #dbdbdd;
+    margin-bottom: 40px;
+    border: 1px black solid;
+    
 }
 
 body {
-    background: rgb(182, 180, 180);        
+    background: rgb(168, 167, 167);        
 }
 
 h1 {
@@ -128,7 +157,7 @@ button:hover {
 footer {
     text-align: center;
     background-color: rgb(103, 107, 107); 
-    height: 100px;
+    height: 160px;
 }
 
 .fab {
